Moved templates inside of the package to enable setuptools distribution via package_data.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,4 +4,4 @@ include CONTRIBUTORS.rst
 include README.rst
 include LICENSE
 include rtv.1
-include templates/index.html
+include rtv/templates/index.html
