--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,10 @@ envlist = py27,py34
 [testenv]
 deps =
     pytest
+    pylint
     mock
     # Waiting for vcrpy to release https://github.com/kevin1024/vcrpy/pull/196
     git+https://github.com/kevin1024/vcrpy.git
 commands = 
+    pylint --rcfile .pylintrc rtv/ -E
     py.test -v {posargs}
