Config now loads default values from a file alongside the source.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,4 +4,5 @@ include CONTRIBUTORS.rst
 include README.rst
 include LICENSE
 include rtv.1
-include rtv/templates/index.html
+include rtv/rtv.cfg
+include rtv/templates/*
