--- a/rtv/rtv.cfg
+++ b/rtv/rtv.cfg
@@ -18,6 +18,9 @@ ascii = False
 
 ; Default subreddit that will be opened when the program launches.
 subreddit = front
+;subreddit = python
+;subreddit = python+linux+programming
+;subreddit = all
 
 ; Allow rtv to store reddit authentication credentials between sessions.
 persistent = True
@@ -32,7 +35,7 @@ history_size = 200
 # OAuth Settings
 ################
 ; This sections defines the paramaters that will be used during the OAuth
-; authentication process. RTV is registered as an "installed app",
+; authentication process. rtv is registered as an "installed app",
 ; see https://github.com/reddit/reddit/wiki/OAuth2 for more information.
 
 ; These settings are defined at https://www.reddit.com/prefs/apps and should
