--- a/rtv/rtv.cfg
+++ b/rtv/rtv.cfg
@@ -50,3 +50,68 @@ oauth_redirect_port = 65000
 
 ; Access permissions that will be requested.
 oauth_scope = edit,history,identity,mysubreddits,privatemessages,read,report,save,submit,subscribe,vote
+
+[bindings]
+##############
+# Key Bindings
+##############
+; Multiple keys that represent the same command should be listed as a comma
+; seperated list. The a mixture of the following notations should be used to
+; describe keys.
+;
+; 1.) Plain keys can be represented by either uppercase/lowercase characters
+;     or the hexadecimal codes referring their ascii codes. For reference, see
+;     https://en.wikipedia.org/wiki/ASCII#ASCII_printable_code_chart
+;         e.g. Q, q, 1, ?
+;         e.g. 0x20 (space), 0x3c (less-than sign)
+;
+; 2.) Special ascii control codes should be surrounded with <>. For reference,
+;     see https://en.wikipedia.org/wiki/ASCII#ASCII_control_code_chart
+;         e.g. <LF> (enter), <ESC> (escape)
+;
+; 3.) Other special keys are defined by curses, they should be surrounded by <>
+;     and prefixed with KEY_. For reference, see
+;     https://docs.python.org/2/library/curses.html#constants
+;         e.g. <KEY_LEFT> (left arrow), <KEY_F5>, <KEY_NPAGE> (page down)
+;
+; Notes:
+; - Curses <KEY_ENTER> is unreliable and should always be used in conjunction
+;   with <LF>.
+
+; General keys
+EXIT = q
+FORCE_EXIT = Q
+HELP = ?
+SORT_HOT = 1
+SORT_TOP = 2
+SORT_RISING = 3
+SORT_NEW = 4
+SORT_CONTROVERSIAL = 5
+MOVE_UP = k, <KEY_UP>
+MOVE_DOWN = j, <KEY_DOWN>
+PAGE_UP = m, <KEY_PPAGE>
+PAGE_DOWN = n, <KEY_NPAGE>
+UPVOTE = a
+DOWNVOTE = z
+LOGIN = u
+DELETE = d
+EDIT = e
+INBOX = i
+REFRESH = r, <KEY_F5>
+
+; Submission page
+SUBMISSION_TOGGLE_COMMENTS = l, 0x20, <KEY_RIGHT>
+SUBMISSION_OPEN_IN_BROWSER = o, <LF>, <KEY_ENTER>
+SUBMISSION_POST = c
+SUBMISSION_EXIT = h, <KEY_LEFT>
+
+; Subreddit page
+SUBREDDIT_SEARCH = f
+SUBREDDIT_PROMPT = /
+SUBREDDIT_POST = c
+SUBREDDIT_OPEN = l, <KEY_RIGHT>
+SUBREDDIT_OPEN_IN_BROWSER = o, <LF>, <KEY_ENTER>, <KEY_ENTER>
+
+; Subscription page
+SUBSCRIPTION_SELECT = l, <LF>, <KEY_ENTER>, <KEY_RIGHT>
+SUBSCRIPTION_EXIT = h, s, <ESC>, <KEY_LEFT>
