--- a/rtv/rtv.cfg
+++ b/rtv/rtv.cfg
@@ -100,7 +100,7 @@ INBOX = i
 REFRESH = r, <KEY_F5>
 
 ; Submission page
-SUBMISSION_TOGGLE_COMMENTS = l, 0x20, <KEY_RIGHT>
+SUBMISSION_TOGGLE_COMMENT = l, 0x20, <KEY_RIGHT>
 SUBMISSION_OPEN_IN_BROWSER = o, <LF>, <KEY_ENTER>
 SUBMISSION_POST = c
 SUBMISSION_EXIT = h, <KEY_LEFT>
@@ -111,6 +111,7 @@ SUBREDDIT_PROMPT = /
 SUBREDDIT_POST = c
 SUBREDDIT_OPEN = l, <KEY_RIGHT>
 SUBREDDIT_OPEN_IN_BROWSER = o, <LF>, <KEY_ENTER>, <KEY_ENTER>
+SUBREDDIT_OPEN_SUBSCRIPTIONS = s
 
 ; Subscription page
 SUBSCRIPTION_SELECT = l, <LF>, <KEY_ENTER>, <KEY_RIGHT>
