Improved config error reporting.

--- a/rtv/rtv.cfg
+++ b/rtv/rtv.cfg
@@ -55,12 +55,12 @@ oauth_scope = edit,history,identity,mysubreddits,privatemessages,read,report,sav
 ##############
 # Key Bindings
 ##############
-; Multiple keys that represent the same command should be listed as a comma
-; seperated list. The a mixture of the following notations should be used to
-; describe keys.
+; If you would like to define custom bindings, copy this section into your
+; config file with the [bindings] heading. All commands must be bound to at
+; least one key for the config to be valid. 
 ;
 ; 1.) Plain keys can be represented by either uppercase/lowercase characters
-;     or the hexadecimal codes referring their ascii codes. For reference, see
+;     or the hexadecimal numbers referring their ascii codes. For reference, see
 ;     https://en.wikipedia.org/wiki/ASCII#ASCII_printable_code_chart
 ;         e.g. Q, q, 1, ?
 ;         e.g. 0x20 (space), 0x3c (less-than sign)
@@ -77,9 +77,10 @@ oauth_scope = edit,history,identity,mysubreddits,privatemessages,read,report,sav
 ; Notes:
 ; - Curses <KEY_ENTER> is unreliable and should always be used in conjunction
 ;   with <LF>.
+; - Use 0x20 for the space key
 
-; General keys
-EXIT = q
+; Base page
+EXIT = q 
 FORCE_EXIT = Q
 HELP = ?
 SORT_HOT = 1
