Linter fixes. Added ctrl-d and ctrl-u for pagedown/pageup.

--- a/rtv/rtv.cfg
+++ b/rtv/rtv.cfg
@@ -77,7 +77,10 @@ oauth_scope = edit,history,identity,mysubreddits,privatemessages,read,report,sav
 ; Notes:
 ; - Curses <KEY_ENTER> is unreliable and should always be used in conjunction
 ;   with <LF>.
-; - Use 0x20 for the space key
+; - Use 0x20 for the space key.
+; - A subset of Ctrl modifiers are available through the ascii control codes.
+;   For example, Ctrl-D will trigger an <EOT> signal. See the table above for
+;   a complete reference.
 
 ; Base page
 EXIT = q 
@@ -90,8 +93,8 @@ SORT_NEW = 4
 SORT_CONTROVERSIAL = 5
 MOVE_UP = k, <KEY_UP>
 MOVE_DOWN = j, <KEY_DOWN>
-PAGE_UP = m, <KEY_PPAGE>
-PAGE_DOWN = n, <KEY_NPAGE>
+PAGE_UP = m, <KEY_PPAGE>, <NAK>
+PAGE_DOWN = n, <KEY_NPAGE>, <EOT>
 UPVOTE = a
 DOWNVOTE = z
 LOGIN = u
