--- a/scripts/rtv.1.template
+++ b/scripts/rtv.1.template
@@ -8,8 +8,10 @@ RTV - Reddit Terminal Viewer
 .SH OPTIONS
 {options}
 .SH CONTROLS
-Navigate between posts by using the arrow keys or vim-style `hjkl` movement.
-You can view the full list of commands by pressing the \fB?\fR key inside of the program.
+Move the cursor using either the arrow keys or Vim-style movement.
+- Press \fBup\fR and \fBdown\fR to scroll through submissions.
+- Press \fBright\fR to view the selected submission and \fBleft\fR to return.
+- Press \fB?\fR to open the help screen.
 .SH FILES
 .TP
 .BR $XDG_CONFIG_HOME/rtv/rtv.cfg
@@ -31,10 +33,8 @@ Specifies which webbrowser RTV will attempt to use when opening links.
 This can be set to a terminal browser (w3m, lynx, elinks, etc.) for a true
 terminal experience. RTV will fallback to the system's default browser.
 .SH AUTHOR
-Man page written by Johnathan "ShaggyTwoDope" Jenkins <twodopeshaggy@gmail.com> (2015).
+Michael Lazar <lazar.michael22@gmail.com> (2016).
 .SH BUGS
 Report bugs to \fIhttps://github.com/michael-lazar/rtv/issues\fR
 .SH LICENSE
 {license}
-.PP
-{copyright}
