Working on adding pager.

--- a/rtv/rtv.cfg
+++ b/rtv/rtv.cfg
@@ -104,10 +104,11 @@ INBOX = i
 REFRESH = r, <KEY_F5>
 
 ; Submission page
-SUBMISSION_TOGGLE_COMMENT = l, 0x20, <KEY_RIGHT>
+SUBMISSION_TOGGLE_COMMENT = 0x20
 SUBMISSION_OPEN_IN_BROWSER = o, <LF>, <KEY_ENTER>
 SUBMISSION_POST = c
 SUBMISSION_EXIT = h, <KEY_LEFT>
+SUBMISSION_OPEN_IN_PAGER = l, <KEY_RIGHT>
 
 ; Subreddit page
 SUBREDDIT_SEARCH = f
