Add monochrome option, chmod 664 when copying config.

--- a/rtv/rtv.cfg
+++ b/rtv/rtv.cfg
@@ -13,6 +13,9 @@
 ; This may be necessary for compatibility with some terminal browsers.
 ascii = False
 
+; Turn on monochrome mode to force text to black and white.
+monochrome = False
+
 ; Enable debugging by logging all HTTP requests and errors to the given file.
 ;log = /tmp/rtv.log
 
