Updated a few descriptions.

--- a/rtv/rtv.cfg
+++ b/rtv/rtv.cfg
@@ -13,7 +13,7 @@
 ; This may be necessary for compatibility with some terminal browsers.
 ascii = False
 
-; Turn on monochrome mode to force text to black and white.
+; Turn on monochrome mode to disable color.
 monochrome = False
 
 ; Enable debugging by logging all HTTP requests and errors to the given file.
