Added ranger w3m image library.

--- a/rtv/rtv.cfg
+++ b/rtv/rtv.cfg
@@ -16,6 +16,12 @@ ascii = False
 ; Turn on monochrome mode to disable color.
 monochrome = False
 
+; Preview submission thumbnails inside of the terminal using the w3mimgdisplay
+; program which is included with the w3m web browser. Not all terminals are able
+; to do this, ones that are known to work include rxvt-unicode, xterm and st.
+; Make sure that w3m is installed on your system before enabling this feature.
+preview_images = True
+
 ; Enable debugging by logging all HTTP requests and errors to the given file.
 ;log = /tmp/rtv.log
 
