--- a/rtv/rtv.cfg
+++ b/rtv/rtv.cfg
@@ -34,6 +34,9 @@ clear_auth = False
 ; Maximum number of opened links that will be saved in the history file.
 history_size = 200
 
+; Default image view
+image_view = feh -Z
+
 ################
 # OAuth Settings
 ################
