moved context menu for show links to separate option to maintain compatibility

--- a/rtv/rtv.cfg
+++ b/rtv/rtv.cfg
@@ -94,6 +94,7 @@ SORT_TOP = 2
 SORT_RISING = 3
 SORT_NEW = 4
 SORT_CONTROVERSIAL = 5
+SHOW_LINKS_FROM = x
 MOVE_UP = k, <KEY_UP>
 MOVE_DOWN = j, <KEY_DOWN>
 PAGE_UP = m, <KEY_PPAGE>, <NAK>
