Add an optional 'handlers' section to the config file for special handling of certain mimetypes.

--- a/rtv/rtv.cfg
+++ b/rtv/rtv.cfg
@@ -124,3 +124,15 @@ SUBREDDIT_OPEN_SUBSCRIPTIONS = s
 ; Subscription page
 SUBSCRIPTION_SELECT = l, <LF>, <KEY_ENTER>, <KEY_RIGHT>
 SUBSCRIPTION_EXIT = h, s, <ESC>, <KEY_LEFT>
+
+###################
+# Mimetype Handlers
+###################
+[handlers]
+
+; In this section, you can name functions to call when handling certain
+; mimetypes. For example, you could run a Python function for viewing
+; an image or listening to audio without leaving the terminal.
+
+; Special handler to open images (view inline when using iTerm2 version 3+).
+; rtv.mime_handlers.iterm2_image_viewer = image/jpeg,image/jpg,image/png,image/gif
