--- a/rtv/rtv.cfg
+++ b/rtv/rtv.cfg
@@ -124,4 +124,4 @@ MULTIREDDIT_OPEN_SUBSCRIPTIONS = S
 
 ; Subscription page
 SUBSCRIPTION_SELECT = l, <LF>, <KEY_ENTER>, <KEY_RIGHT>
-SUBSCRIPTION_EXIT = h, s, <ESC>, <KEY_LEFT>
+SUBSCRIPTION_EXIT = h, s, S, <ESC>, <KEY_LEFT>
