Added urlview keybinding
1.  A shortcut of 'b' was used as the default binding for passing
comment body text to urlview (this is similar to the default of C-b in
the 'mutt' text email client)
2.  The `comment_urlview` SubmissionController function was added to
recieve the SUBMISSION_OPEN_IN_URLVIEWER keypress request.
3.  The `open_urlview` terminal function was added to handle the urlview
request.  It passes the comment body data to urlview via a Popen
process.
4.  A test case was added to ensure this new code path is executed
5.  Small formatting changes, mostly line length

--- a/rtv/rtv.cfg
+++ b/rtv/rtv.cfg
@@ -112,6 +112,7 @@ SUBMISSION_OPEN_IN_BROWSER = o, <LF>, <KEY_ENTER>
 SUBMISSION_POST = c
 SUBMISSION_EXIT = h, <KEY_LEFT>
 SUBMISSION_OPEN_IN_PAGER = l, <KEY_RIGHT>
+SUBMISSION_OPEN_IN_URLVIEWER = b
 
 ; Subreddit page
 SUBREDDIT_SEARCH = f
