--- a/scripts/rtv.1.template
+++ b/scripts/rtv.1.template
@@ -28,6 +28,10 @@ for future sessions. You can disable this behavior by setting the option
 Text editor to use when editing comments and submissions. Will fallback to
 \fI$EDITOR\fR. 
 .TP
+.BR RTV_URLVIEWER
+Url Viewer to use to extract links from comments.  Requires a compatible 
+Url Viewer to be installed
+.TP
 .BR BROWSER
 Web browser to use when opening links.
 .TP
