Added a new keybind (defaults to q) that toggles between the Frontpage and your most recently viewed subreddit.

--- a/rtv/rtv.cfg
+++ b/rtv/rtv.cfg
@@ -121,6 +121,7 @@ SUBREDDIT_POST = c
 SUBREDDIT_OPEN = l, <KEY_RIGHT>
 SUBREDDIT_OPEN_IN_BROWSER = o, <LF>, <KEY_ENTER>, <KEY_ENTER>
 SUBREDDIT_OPEN_SUBSCRIPTIONS = s
+SUBREDDIT_FRONTPAGE = p
 
 ; Subscription page
 SUBSCRIPTION_SELECT = l, <LF>, <KEY_ENTER>, <KEY_RIGHT>
