Fighting with mailcap

--- a/rtv/rtv.cfg
+++ b/rtv/rtv.cfg
@@ -34,6 +34,9 @@ clear_auth = False
 ; Maximum number of opened links that will be saved in the history file.
 history_size = 200
 
+; Open external links using programs defined in the mailcap config.
+enable_media = True
+
 ################
 # OAuth Settings
 ################
