--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,12 @@
 [wheel]
 universal = 1
+
+[metadata]
+requires-dist = 
+    tornado
+    praw>=3.5,<4
+    six
+    requests
+    kitchen
+    futures; python_version=="2.6" or python_version=="2.7"
+    
