Turn off enable-media by default, add loop=inf to mpv.

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -35,7 +35,7 @@ clear_auth = False
 history_size = 200
 
 ; Open external links using programs defined in the mailcap config.
-enable_media = True
+enable_media = False
 
 ################
 # OAuth Settings
