--- a/setup.cfg
+++ b/setup.cfg
@@ -8,5 +8,7 @@ requires-dist =
     six
     requests
     kitchen
+    beautifulsoup4
+    mailcap-fix
     futures; python_version=="2.6" or python_version=="2.7"
     
