--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,7 @@ deps =
     pytest
     pylint
     mock
-    # Waiting for vcrpy to release https://github.com/kevin1024/vcrpy/pull/196
-    git+https://github.com/kevin1024/vcrpy.git
+    vcrpy
 commands = 
     pylint --rcfile .pylintrc rtv/ -E
     py.test -v {posargs}
