--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -101,6 +101,8 @@ MOVE_UP = k, <KEY_UP>
 MOVE_DOWN = j, <KEY_DOWN>
 PAGE_UP = m, <KEY_PPAGE>, <NAK>
 PAGE_DOWN = n, <KEY_NPAGE>, <EOT>
+PAGE_TOP = gg
+PAGE_BOTTOM = G
 UPVOTE = a
 DOWNVOTE = z
 LOGIN = u
