Got the prompt working from submissions / subscriptions.

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -110,6 +110,7 @@ DELETE = d
 EDIT = e
 INBOX = i
 REFRESH = r, <KEY_F5>
+PROMPT = /
 SAVE = w
 
 ; Submission page
@@ -122,7 +123,6 @@ SUBMISSION_OPEN_IN_URLVIEWER = b
 
 ; Subreddit page
 SUBREDDIT_SEARCH = f
-SUBREDDIT_PROMPT = /
 SUBREDDIT_POST = c
 SUBREDDIT_OPEN = l, <KEY_RIGHT>
 SUBREDDIT_OPEN_IN_BROWSER = o, <LF>, <KEY_ENTER>, <KEY_ENTER>
