--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -37,6 +37,9 @@ history_size = 200
 ; Open external links using programs defined in the mailcap config.
 enable_media = False
 
+; Use youtube-dl to check for multimedia links
+has_youtube-dl = False
+
 ################
 # OAuth Settings
 ################
