added max column width for comments

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -57,6 +57,9 @@ oauth_redirect_port = 65000
 ; Access permissions that will be requested.
 oauth_scope = edit,history,identity,mysubreddits,privatemessages,read,report,save,submit,subscribe,vote
 
+; Maximum number of columns for a comment
+max_comment_cols = 20
+
 [bindings]
 ##############
 # Key Bindings
