Update template config with new option

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -60,6 +60,9 @@ oauth_redirect_port = 65000
 ; Access permissions that will be requested.
 oauth_scope = edit,history,identity,mysubreddits,privatemessages,read,report,save,submit,subscribe,vote
 
+; Hide username if logged in, display "Logged in" instead
+hide_username = False
+
 [bindings]
 ##############
 # Key Bindings
