--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ universal = 1
 requires-dist = 
     praw>=3.5,<4
     six
-    requests
+    requests>=2.4.0
     kitchen
     beautifulsoup4
     mailcap-fix
