Bundling praw v3 with rtv

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,10 +2,10 @@
 universal = 1
 
 [metadata]
-requires-dist = 
-    praw>=3.5,<4
-    six
-    requests>=2.4.0
-    kitchen
+requires-dist =
     beautifulsoup4
+    decorator
+    kitchen
     mailcap-fix
+    requests>=2.4.0
+    six
