Try upgrading pip

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ matrix:
   allow_failures:
     - python: nightly
   fast_finish: true
+before_install:
+  - pip install --upgrade pip   
 install:
   - pip install .[test]
   - pip install .
