Code review refactoring

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -118,8 +118,8 @@ INBOX = i
 REFRESH = r, <KEY_F5>
 PROMPT = /
 SAVE = w
-COPY_SUBMISSION_PERMALINK = y
-COPY_SUBMISSION_URL = Y
+COPY_PERMALINK = y
+COPY_URL = Y
 
 ; Submission page
 SUBMISSION_TOGGLE_COMMENT = 0x20
