--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -63,6 +63,11 @@ oauth_redirect_port = 65000
 ; Access permissions that will be requested.
 oauth_scope = edit,history,identity,mysubreddits,privatemessages,read,report,save,submit,subscribe,vote
 
+; This is a separate token for the imgur api. It is used to extract images from
+; convoluted imgur links and albums so they can be opened with mailcap.
+; See https://imgur.com/account/settings/apps to generate your own key.
+imgur_client_id = 93396265f59dec9
+
 [bindings]
 ##############
 # Key Bindings
