Adding the ability to highlight

--- a/rtv/themes/monochrome.cfg
+++ b/rtv/themes/monochrome.cfg
@@ -2,47 +2,49 @@
 
 [theme]
 ;<element>            = <foreground>  <background>  <attributes>
+@normal               = default       default
+@highlight            = default       default       reverse
 
-bar_level_1           = default       default
-bar_level_2           = default       default
-bar_level_3           = default       default
-bar_level_4           = default       default
-comment_author        = default       default       bold
-comment_author_self   = default       default       bold
-comment_count         = default       default
-comment_text          = default       default
-created               = default       default
-cursor                = default       default       reverse
-default               = default       default
-downvote              = default       default       bold
-gold                  = default       default       bold
-help_bar              = default       default       bold+reverse
-hidden_comment_expand = default       default       bold
-hidden_comment_text   = default       default
-multireddit_name      = default       default       bold
-multireddit_text      = default       default
-neutral_vote          = default       default       bold
-notice_info           = default       default
-notice_loading        = default       default
-notice_error          = default       default
-notice_success        = default       default
-nsfw                  = default       default       bold
-order_bar             = default       default       bold
-order_selected        = default       default       bold+reverse
-prompt                = default       default       bold+reverse
-saved                 = default       default
-score                 = default       default
-separator             = default       default       bold
-stickied              = default       default
-subscription_name     = default       default       bold
-subscription_text     = default       default
-submission_author     = default       default
-submission_flair      = default       default       bold
-submission_subreddit  = default       default
-submission_text       = default       default
-submission_title      = default       default       bold
-title_bar             = default       default       bold+reverse
-upvote                = default       default       bold
-url                   = default       default       underline
-url_seen              = default       default       underline
-user_flair            = default       default       bold
+bar_level_1           = -             -
+bar_level_2           = -             -
+bar_level_3           = -             -
+bar_level_4           = -             -
+comment_author        = -             -             bold
+comment_author_self   = -             -             bold
+comment_count         = -             -
+comment_text          = -             -
+created               = -             -
+cursor                = -             -
+cursor.highlight      = -             -             reverse
+downvote              = -             -             bold
+gold                  = -             -             bold
+help_bar              = -             -             bold+reverse
+hidden_comment_expand = -             -             bold
+hidden_comment_text   = -             -
+multireddit_name      = -             -             bold
+multireddit_text      = -             -
+neutral_vote          = -             -             bold
+notice_info           = -             -
+notice_loading        = -             -
+notice_error          = -             -
+notice_success        = -             -
+nsfw                  = -             -             bold
+order_bar             = -             -             bold
+order_bar.highlight   = -             -             bold+reverse
+prompt                = -             -             bold+reverse
+saved                 = -             -
+score                 = -             -
+separator             = -             -             bold
+stickied              = -             -
+subscription_name     = -             -             bold
+subscription_text     = -             -
+submission_author     = -             -
+submission_flair      = -             -             bold
+submission_subreddit  = -             -
+submission_text       = -             -
+submission_title      = -             -             bold
+title_bar             = -             -             bold+reverse
+upvote                = -             -             bold
+url                   = -             -             underline
+url_seen              = -             -             underline
+user_flair            = -             -             bold
