--- a/rtv/themes/solarized-dark.cfg
+++ b/rtv/themes/solarized-dark.cfg
@@ -19,47 +19,53 @@
 
 [theme]
 ;<element>            = <foreground>  <background>  <attributes>
+@normal               = ansi_244      ansi_234
+@highlight            = ansi_244      ansi_235
 
-bar_level_1           = ansi_125      ansi_234
-bar_level_2           = ansi_160      ansi_234
-bar_level_3           = ansi_61       ansi_234
-bar_level_4           = ansi_37       ansi_234
-comment_author        = ansi_33       ansi_234       bold
-comment_author_self   = ansi_64       ansi_234       bold
-comment_count         = ansi_244      ansi_234
-comment_text          = ansi_244      ansi_234
-created               = ansi_244      ansi_234
-cursor                = ansi_244      ansi_234       reverse
-default               = ansi_244      ansi_234
-downvote              = ansi_160      ansi_234       bold
-gold                  = ansi_136      ansi_234       bold
-help_bar              = ansi_37       ansi_234       bold+reverse
-hidden_comment_expand = ansi_240      ansi_234       bold
-hidden_comment_text   = ansi_240      ansi_234
-multireddit_name      = ansi_245      ansi_234       bold
-multireddit_text      = ansi_240      ansi_234
-neutral_vote          = ansi_244      ansi_234       bold
-notice_info           = ansi_244      ansi_234       bold
-notice_loading        = ansi_244      ansi_234       bold
-notice_error          = ansi_160      ansi_234       bold
-notice_success        = ansi_64       ansi_234       bold
-nsfw                  = ansi_125      ansi_234       bold+reverse
-order_bar             = ansi_240      ansi_235       bold
-order_selected        = ansi_240      ansi_235       bold+reverse
-prompt                = ansi_33       ansi_234       bold+reverse
-saved                 = ansi_125      ansi_234
-score                 = ansi_244      ansi_234
-separator             = ansi_244      ansi_234       bold
-stickied              = ansi_136      ansi_234
-subscription_name     = ansi_245      ansi_234       bold
-subscription_text     = ansi_240      ansi_234
-submission_author     = ansi_64       ansi_234       bold
-submission_flair      = ansi_160      ansi_234
-submission_subreddit  = ansi_166      ansi_234
-submission_text       = ansi_244      ansi_234
-submission_title      = ansi_245      ansi_234       bold
-title_bar             = ansi_37       ansi_234       bold+reverse
-upvote                = ansi_64       ansi_234       bold
-url                   = ansi_33       ansi_234       underline
-url_seen              = ansi_61       ansi_234       underline
-user_flair            = ansi_136      ansi_234       bold
+bar_level_1           = ansi_125      -
+bar_level_1.highlight = ansi_125      -             reverse
+bar_level_2           = ansi_160      -
+bar_level_2.highlight = ansi_125      -             reverse
+bar_level_3           = ansi_61       -
+bar_level_3.highlight = ansi_125      -             reverse
+bar_level_4           = ansi_37       -
+bar_level_4.highlight = ansi_125      -             reverse
+comment_author        = ansi_33       -             bold
+comment_author_self   = ansi_64       -             bold
+comment_count         = -             -
+comment_text          = -             -
+created               = -             -
+cursor                = -             -
+cursor.highlight      = ansi_240      -             reverse
+downvote              = ansi_160      -             bold
+gold                  = ansi_136      -             bold
+help_bar              = ansi_37       -             bold+reverse
+hidden_comment_expand = ansi_245      -             bold
+hidden_comment_text   = ansi_245      -
+multireddit_name      = ansi_240      -             bold
+multireddit_text      = ansi_245      -
+neutral_vote          = -             -             bold
+notice_info           = -             -             bold
+notice_loading        = -             -             bold
+notice_error          = ansi_160      -             bold
+notice_success        = ansi_64       -             bold
+nsfw                  = ansi_125      -             bold+reverse
+order_bar             = ansi_245      -             bold
+order_bar.highlight   = ansi_245      -             bold+reverse
+prompt                = ansi_33       -             bold+reverse
+saved                 = ansi_125      -
+score                 = -             -
+separator             = -             -             bold
+stickied              = ansi_136      -
+subscription_name     = ansi_240      -             bold
+subscription_text     = ansi_245      -
+submission_author     = ansi_64       -             bold
+submission_flair      = ansi_160      -
+submission_subreddit  = ansi_166      -
+submission_text       = -             -
+submission_title      = ansi_244      -             bold
+title_bar             = ansi_37       -             bold+reverse
+upvote                = ansi_64       -             bold
+url                   = ansi_33       -             underline
+url_seen              = ansi_61       -             underline
+user_flair            = ansi_136      -             bold
