--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -105,6 +105,7 @@ SORT_NEW = 4
 SORT_CONTROVERSIAL = 5
 MOVE_UP = k, <KEY_UP>
 MOVE_DOWN = j, <KEY_DOWN>
+NEXT_THEME = <KEY_F3>
 PAGE_UP = m, <KEY_PPAGE>, <NAK>
 PAGE_DOWN = n, <KEY_NPAGE>, <EOT>
 PAGE_TOP = gg
