--- a/rtv/themes/default.cfg
+++ b/rtv/themes/default.cfg
@@ -2,46 +2,53 @@
 
 [theme]
 ;<element>            = <foreground>  <background>  <attributes>
-bar_level_1           = magenta       default
-bar_level_2           = cyan          default
-bar_level_3           = green         default
-bar_level_4           = yellow        default
-comment_author        = blue          default       bold
-comment_author_self   = green         default       bold
-comment_count         = default       default
-comment_text          = default       default
-created               = default       default
-cursor                = default       default       reverse
-default               = default       default
-downvote              = red           default       bold
-gold                  = yellow        default       bold
-help_bar              = cyan          default       bold+reverse
-hidden_comment_expand = default       default       bold
-hidden_comment_text   = default       default
-multireddit_name      = yellow        default       bold
-multireddit_text      = default       default
-neutral_vote          = default       default       bold
-notice_info           = default       default
-notice_loading        = default       default
-notice_error          = red           default
-notice_success        = green         default
-nsfw                  = red           default       bold
-order_bar             = yellow        default       bold
-order_selected        = yellow        default       bold+reverse
-prompt                = cyan          default       bold+reverse
-saved                 = green         default
-score                 = default       default
-separator             = default       default       bold
-stickied              = green         default
-subscription_name     = yellow        default       bold
-subscription_text     = default       default
-submission_author     = green         default
-submission_flair      = red           default
-submission_subreddit  = yellow        default
-submission_text       = default       default
-submission_title      = default       default       bold
-title_bar             = cyan          default       bold+reverse
-upvote                = green         default       bold
-url                   = blue          default       underline
-url_seen              = magenta       default       underline
-user_flair            = yellow        default       bold
+@normal               = default       default
+@highlight            = default       default
+
+bar_level_1           = magenta       -
+bar_level_1.highlight = magenta       -             reverse
+bar_level_2           = cyan          -
+bar_level_2.highlight = cyan          -             reverse
+bar_level_3           = green         -
+bar_level_3.highlight = green         -             reverse
+bar_level_4           = yellow        -
+bar_level_4.highlight = yellow        -             reverse
+comment_author        = blue          -             bold
+comment_author_self   = green         -             bold
+comment_count         = -             -
+comment_text          = -             -
+created               = -             -
+cursor                = -             -
+cursor.highlight      = -             -             reverse
+downvote              = red           -             bold
+gold                  = yellow        -             bold
+help_bar              = cyan          -             bold+reverse
+hidden_comment_expand = -             -             bold
+hidden_comment_text   = -             -
+multireddit_name      = yellow        -             bold
+multireddit_text      = -             -
+neutral_vote          = -             -             bold
+notice_info           = -             -
+notice_loading        = -             -
+notice_error          = red           -
+notice_success        = green         -
+nsfw                  = red           -             bold
+order_bar             = yellow        -             bold
+order_bar.highlight   = yellow        -             bold+reverse
+prompt                = cyan          -             bold+reverse
+saved                 = green         -
+score                 = -             -
+separator             = -             -             bold
+stickied              = green         -
+subscription_name     = yellow        -             bold
+subscription_text     = -             -
+submission_author     = green         -
+submission_flair      = red           -
+submission_subreddit  = yellow        -
+submission_text       = -             -
+submission_title      = -             -             bold
+title_bar             = cyan          -             bold+reverse
+upvote                = green         -             bold
+url                   = blue          -             underline
+url_seen              = magenta       -             underline
+user_flair            = yellow        -             bold
