Removing redundant configuration entry

--- a/rtv/templates/rtv.cfg
+++ b/rtv/templates/rtv.cfg
@@ -140,7 +140,7 @@ SUBMISSION_GOTO_SIBLING = J
 SUBREDDIT_SEARCH = f
 SUBREDDIT_POST = c
 SUBREDDIT_OPEN = l, <KEY_RIGHT>
-SUBREDDIT_OPEN_IN_BROWSER = o, <LF>, <KEY_ENTER>, <KEY_ENTER>
+SUBREDDIT_OPEN_IN_BROWSER = o, <LF>, <KEY_ENTER>
 SUBREDDIT_OPEN_SUBSCRIPTIONS = s
 SUBREDDIT_OPEN_MULTIREDDITS = S
 SUBREDDIT_FRONTPAGE = p
