Update README references to markdown

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 include version.py
 include CHANGELOG.rst
 include AUTHORS.rst
-include README.rst
+include README.md
 include LICENSE
 include rtv.1
 include rtv/templates/*
