--- a/scripts/rtv.1.template
+++ b/scripts/rtv.1.template
@@ -16,7 +16,7 @@ Press \fB?\fR to open the help screen.
 .TP
 .BR $XDG_CONFIG_HOME/rtv/rtv.cfg
 The configuration file can be used to customize default program settings, see
-README.rst for more information.
+README.md for more information.
 .TP
 .BR $XDG_CONFIG_HOME/rtv/refresh-token
 After you login to reddit, your most recent OAuth refresh token will be stored
