Refactoring the monochrome stuff

--- a/rtv/themes/solarized-dark.cfg
+++ b/rtv/themes/solarized-dark.cfg
@@ -19,8 +19,8 @@
 
 [theme]
 ;<element>            = <foreground>  <background>  <attributes>
-@normal               = ansi_244      ansi_234
-@highlight            = ansi_244      ansi_235
+@normal               = ansi_244      ansi_234      normal
+@highlight            = ansi_244      ansi_235      normal
 
 bar_level_1           = ansi_125      -
 bar_level_1.highlight = ansi_125      -             reverse
