--- a/rtv/themes/solarized-light.cfg
+++ b/rtv/themes/solarized-light.cfg
@@ -19,8 +19,8 @@
 
 [theme]
 ;<element>            = <foreground>  <background>  <attributes>
-@normal               = ansi_241      ansi_230
-@highlight            = ansi_241      ansi_254
+@normal               = ansi_241      ansi_230      normal
+@highlight            = ansi_241      ansi_254      normal
 
 bar_level_1           = ansi_125      -
 bar_level_1.highlight = ansi_125      -             reverse
